fix dark mode when system is dark

--- a/src/content/blog/border-radius-tricks/border-styles.css
+++ b/src/content/blog/border-radius-tricks/border-styles.css
@@ -20,10 +20,13 @@
     --example-surface: black;
   }
 
-  @media (prefers-color-scheme: dark) {
+  [data-theme='light'] .example {
+    --ink: black;
+    --example-surface: white;
+  }
 
-    /* increase specificity */
-    div.example {
+  @media (prefers-color-scheme: dark) {
+    .example {
       --ink: white;
       --example-surface: black;
     }
